# fla

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  justfile  report.typ
fla-project/app/: CMakeLists.txt  main.cc
fla-project/docs/: CMakeLists.txt  mainpage.md
fla-project/include/fla/: pda.h  simulator.h  tm.h
fla-project/src/: CMakeLists.txt  pda.cc  pda_parser.cc  simulator.cc  tm.cc  tm_parser.cc
fla-project/test/: CMakeLists.txt  simulator.cc
include/fla/: pda.h  simulator.h  tm.h  util.h
pda/: anbn.pda  case.pda
python/: test_fla.py  test_pda.py  test_tm.py  util.py
src/: main.cc  main.cpp  pda.cc  pda_parser.cc  simulator.cc  tm.cc  tm_parser.cc
test/: CMakeLists.txt  simple.cc
tm/: case1.tm  case2.tm
